# argus

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
argus/: __main__.py  config.py
argus/connectors/: calendar.py  cot.py  fred.py  kalshi.py  news.py  norgate.py  options.py  prices.py  types.py
argus/coordinator/: main.py
argus/engines/: anomaly.py  event_detector.py  regime.py  sentiment.py  types.py
argus/router/: auth.py  query.py  server.py
argus/store/: db.py
argus/synthesis/: claude.py  packager.py
src/: checkpoint.rs  config.rs  fsm.rs  lib.rs  main.rs  publish.rs  session.rs  signals.rs  utils.rs  wal.rs
src/inference/: classifier.rs  generative.rs  mod.rs
src/ingest/: fred.rs  kalshi.rs  mod.rs  news.rs  norgate.rs
tests/: test_checkpoint.rs  test_fsm.rs  test_session.rs  test_signals.rs  test_wal.rs
ui/: package-lock.json  package.json
ui/app/: globals.css  layout.tsx  page.tsx
ui/components/: ArgusChart.tsx  KalshiStrip.tsx
ui/hooks/: useAnalysis.ts  useArgusStream.ts  useQuery.ts
