[package]
name = "argus"
version = "0.1.0"
edition = "2021"
description = "Local-first macro intelligence engine — Monolith Systematic LLC"
license = "MIT"

[[bin]]
name = "argus"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1"
crc = "3"
anyhow = "1"
reqwest = { version = "0.12", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
dirs = "5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sha2 = "0.10"
hex = "0.4"
clap = { version = "4", features = ["derive"] }
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
